updating body content

--- a/hurricanemanagement.html
+++ b/hurricanemanagement.html
@@ -32,11 +32,28 @@
     </div>
     <!-- Navigation End. Keep this consistent throughout the pages-->
 
-    <div>
-      <h1> Applying Core Risk Management Principles to Disaster Risk Management</h1>
-      <p> Businesses can leverage the recent experiences and basic risk management principles to develop proactive DRM strategies. The basic principles of risk management can and should be applied for Disaster Risk Management (DRM) to:</p>
-
-    </div> 
+    <section class="background1">
+      <div>
+        <h1> Applying Core Risk Management Principles to Disaster Risk Management(DRM)</h1>
+        <p> Businesses can leverage the recent experiences and basic risk management principles to develop proactive DRM strategies. The basic principles of risk management can and should be applied for Disaster Risk Management (DRM) to:</p>
+        <ul>
+          <li>Identify and Predict risk</li>
+            <p>Businesses with offices or assets in regions that are likely targets for high severity weather events should identify disasters as strategic risks.</p>
+          <li>Assess Risk</li>
+            <p>Businesses need to incorporate disaster risk considerations into portfolio analytics, modeling assumptions and forecasting.</p>
+          <li>Develop Risk Response and Control Plan:</li>
+            <p>Businesses ought to define thresholds and triggers that exceed risk appetite and/or present unacceptable heightened risks. These metrics will be incorporated into a risk management plan that outlines required response actions, stakeholders involved and desired mitigation outcomes.</p>
+          <li>DRM Communication Plan:</li>
+            <p>Organizations should apply an active communication plan for all stages of DRM. Communication approaches and methods should be defined from early stages of event monitoring through to communication during incident response, including considerations for business resiliency tactics.</p>
+          <li>Risk Monitoring and Analysis:</li>
+            <p>Companies must implement processes for proactive monitoring of events that present heightened risk, including natural and man-made disasters. Companies also need to implement tracking and reporting to evaluate mid-to-long term impacts that may be detected after risk events subside.</p>
+        </ul>
+      </div> 
+        <div class="column-right">
+          <img src="image/drmcycle.jpg" alt="drmcycle" class="image">
+        </div>
+      </div>
+    </section>
 
     <!-- Concluding remarks and button to contact us page-->   
       <section class="background2">
