testing css and index

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!--Navbar toggle when screensize changes-->
     <div class="mobile-nav-toggle"><div class="top-bar"></div><div class="middle-bar"></div><div class="bottom-bar"></div></div>
     <div class="mobile-nav-toggle fixed-nav-toggle"><div class="top-bar"></div><div class="middle-bar"></div><div class="bottom-bar"></div></div>
-    
+
     <!-- Navigation Start. Keep this consistent throughout the pages-->
     <div class="navbar">
       <div class="logo">GR8 Consulting</div>
@@ -53,6 +53,63 @@
         </div>
       </div>
     </section>
+
+    <section>
+    <div class="row">
+      <div class="column">
+        <div class="card">
+          <img src="img1.jpg" alt="Jane" style="width:100%">
+          <div class="container">
+            <h2>Jane Doe</h2>
+            <p class="title">CEO &amp; Founder</p>
+            <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+            <p>example@example.com</p>
+            <p><button class="button">Contact</button></p>
+          </div>
+        </div>
+      </div>
+
+      <div class="column">
+        <div class="card">
+          <img src="img2.jpg" alt="Mike" style="width:100%">
+          <div class="container">
+            <h2>Mike Ross</h2>
+            <p class="title">Art Director</p>
+            <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+            <p>example@example.com</p>
+            <p><button class="button">Contact</button></p>
+          </div>
+        </div>
+      </div>
+
+      <div class="column">
+        <div class="card">
+          <img src="img2.jpg" alt="Mike" style="width:100%">
+          <div class="container">
+            <h2>Mike Ross</h2>
+            <p class="title">Art Director</p>
+            <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+            <p>example@example.com</p>
+            <p><button class="button">Contact</button></p>
+          </div>
+        </div>
+      </div>
+
+      <div class="column">
+        <div class="card">
+          <img src="img3.jpg" alt="John" style="width:100%">
+          <div class="container">
+            <h3>John Doe</h3>
+            <p class="title">Designer</p>
+            <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+            <p>example@example.com</p>
+            <p><button class="button">Contact</button></p>
+          </div>
+        </div>
+      </div>
+    </div>
+    </section>
+
 
     <!-- Concluding remarks and button to contact us page-->   
     <section class="background2">
