--- a/WillProduct.html
+++ b/WillProduct.html
@@ -28,7 +28,7 @@
   <!-- Navigation End. Keep this consistent throughout the pages-->
 
   <!--  Who is William Section-->
-  <section class="background000">
+  <section class="background0000">
     <div id="Section">
       <h3>Who is William?</h3>
     </div>
@@ -37,18 +37,18 @@
         src='image/willy.JPG' alt="Will and Friends"/>
       </a>
   </div>
-  <p id="Section">
+  <p id="Section70">
     The handsome fella in the middle
   </p>
-    <p id="Section">
+    <p id="Section71">
       My name is William Inglis and a student at Fleming College. A hardworker at the YMCA and an aspiring aquafit instructor.
     </p>
 </section>
 <!-- End of Who is William Section-->
 
 <!--  Who is William Section-->
- <section class="background000">
-  <div id="Section">
+ <section class="background0000">
+  <div id="Section70">
     <h3>What keeps me motivated?</h3>
   </div>
   <div class='container3'>
@@ -56,7 +56,7 @@
       src='image/Ronnie.JPG'alt="Will and Friendss"/>
     </a>
 </div>
-  <p id="Section">
+  <p id="Section70">
     Ronnie Coleman - "Yeah Buddy. Lightweight Baby. Woo!"
   </p>
 </section>
@@ -67,7 +67,7 @@
     <div class="container2">
       <div class="centerr">
         <h1>Implementation of trip planning</h1>
-        <p id="Section2">
+        <p id="Section71">
           This use of the trip planning will help clients who are interested in visiting Ontario's Provincal Parks.
           <br>
           <br>
