--- a/WillProduct.html
+++ b/WillProduct.html
@@ -29,7 +29,7 @@
 
   <!--  Who is William Section-->
   <section class="background0000">
-    <div id="Section">
+    <div id="Section70">
       <h3>Who is William?</h3>
     </div>
     <div class='container3'>
