--- a/gallery.html
+++ b/gallery.html
@@ -40,23 +40,38 @@
 
       <!-- Full-width images with number text -->
           <div class="mySlides">
-            <div class="numbertext">1 / 3</div>
+            <div class="numbertext">1 / 6</div>
             <img src="image/BikeMap1.png" alt="Bike Map 1 of Hamilton" class="image1">
           </div>
   
           <div class="mySlides">
-            <div class="numbertext">2 / 3</div>
+            <div class="numbertext">2 / 6</div>
             <img src="image/BikeMap2.png" alt="Bike Map 2 of Hamilton" class="image1">
           </div>
   
           <div class="mySlides">
-            <div class="numbertext">3 / 3</div>
+            <div class="numbertext">3 / 6</div>
             <img src="image/BikeMap3.png" alt="Bike Map 3 of Hamilton" class="image1">
           </div>
 
           <div class="mySlides">
-            <div class="numbertext">3 / 3</div>
-            <img src="image/BikeMap4.png" alt="Traffic flow analysis" class="image1">
+            <div class="numbertext">4 / 6</div>
+            <img src="image/cbroomhuc76.jpg" alt="Digizing" class="image1">
+          </div>
+
+          <div class="mySlides">
+            <div class="numbertext">5 / 6</div>
+            <img src="image/ChirsMap2_page-0001.jpg" alt="Greyscale Map" class="image1">
+          </div>
+
+          <div class="mySlides">
+            <div class="numbertext">6 / 6</div>
+            <img src="image/ChrisMap1_page-0001.jpg" alt="Topographic Map" class="image1">
+          </div>
+
+          <div class="mySlides">
+            <div class="numbertext">7 / 7</div>
+            <img src="image/ChrisBroomServiceArea.jpg" alt="Service Area" class="image1">
           </div>
   
           <!-- Next and previous buttons -->
