adding gallery to navbar

--- a/gallery.html
+++ b/gallery.html
@@ -23,6 +23,7 @@
         </div>
       </div>
       <a href="aboutus.html" class = "dropbtn">About Us</a>
+      <a href="gallery.html" class = "dropbtn">Gallery</a>
       <a href="contact.html" class = "dropbtn">Contact Us</a>
     </div>
     <!-- Navigation End. Keep this consistent throughout the pages-->
