changes about us

--- a/aboutus.html
+++ b/aboutus.html
@@ -27,16 +27,16 @@
           </div>
         </div>
         <a href="aboutus.html" class = "dropbtn">About Us</a>
+        <a href="gallery.html" class = "dropbtn">Gallery</a>
         <a href="contact.html" class = "dropbtn">Contact Us</a>
-      </div>
+    </div>
     <!-- Navigation End. Keep this consistent throughout the pages-->
     
-        <div class="container">
-            <h2>About Us</h2>
-        <div class="names-row">
+    <div class="container">
+        <div class="column-left">
             <div class="names">
-                <p>Grace</p>
-                <h3>Grace's product: Implementation of separated bike lanes (consult, planning) in a city</h3>
+                <p id="nameid">Grace</p>
+                <h3>Implementation of separated bike lanes (consult, planning) in a city</h3>
                 <ul>
                     <li>Access road network</li>
                     <li>View impacts on traffic flow influenced by bike lanes</li>
@@ -45,9 +45,9 @@
                 </ul>
                 <button onclick = "GButton()"> View Product </button>
             </div>
-            <div class="names">
-                <p>Ryan</p>
-                <h3>Ryan's product: Implementation of disaster management and mitigation for/from hurricanes</h3>
+            <div class="column-left">
+                <p id="nameid">Ryan</p>
+                <h3>Implementation of disaster management and mitigation for/from hurricanes</h3>
                 <ul>
                     <li>Building disaster management frameworks</li>
                     <li>Hurricane path projection and preparedness</li>
@@ -55,9 +55,9 @@
                 </ul>
                 <button onclick = "RButton()"> View Product </button>
             </div>
-            <div class="names">
-                <p>Chris</p>
-                <h3>Chris's product: TBD</h3>
+            <div class="column-right">
+                <p id="nameid">Chris</p>
+                <h3>TBD</h3>
                 <ul>
                     <li>Topographic mapping services</li>
                     <li>Greyscale mapping servcies</li>
@@ -66,14 +66,13 @@
                 </ul>
                 <button onclick = "CButton()"> View Product</button>
             </div>
-            <div class="names">
-                <p>William Inglis</p>
-                <h3>William's product: Implementation of trip planning for provincal parks in Ontario</h3>
+            <div class="column-right">
+                <p id="nameid">William</p>
+                <h3>Implementation of trip planning for provincal parks in Ontario</h3>
                 <ul>
                     <li>Trip Planner and aspiring aquafit instructor</li>
                 </ul>
                 <button onclick = "WButton()"> View Product </button>
-            </div>
             </div>
         </div>
     </div>
@@ -91,7 +90,7 @@
                 <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
             </div>
         </div>
-      </section>
+    </section>
 
     
 
