bottom nav button changed

--- a/gallery.html
+++ b/gallery.html
@@ -101,7 +101,16 @@
           </div>
     </div>
 
-    </section>
+    <div class = "center">
+      <h1> GR8 Knows All </h1>
+      <p> If you'd like to learn more, get in reach with one of our GIS specialists today</p>
+      <button onclick = "myButton()">Book a consultation now</button>
+  </div>
+
+  <!--Back to Top Button-->
+  <div>
+    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+  </div>
   </body>
   
   <script src="Script.js"></script> <!-- Call in script.js for button and other functions-->
