--- a/WillProduct.html
+++ b/WillProduct.html
@@ -39,7 +39,7 @@
       </a>
   </div>
   <p id="Section70">
-    The handsome fella in the middle
+    You guessed it! - I'm the handsome fella in the middle
   </p>
     <p id="Section71">
       My name is William Inglis and a student at Fleming College. A hardworker at the YMCA and an aspiring aquafit instructor.
