--- a/gallery.html
+++ b/gallery.html
@@ -23,7 +23,6 @@
         </div>
       </div>
       <a href="aboutus.html" class = "dropbtn">About Us</a>
-      <a href="gallery.html" class = "dropbtn">Gallery</a>
       <a href="contact.html" class = "dropbtn">Contact Us</a>
     </div>
     <!-- Navigation End. Keep this consistent throughout the pages-->
@@ -41,38 +40,23 @@
 
       <!-- Full-width images with number text -->
           <div class="mySlides">
-            <div class="numbertext">1 / 6</div>
+            <div class="numbertext">1 / 3</div>
             <img src="image/BikeMap1.png" alt="Bike Map 1 of Hamilton" class="image1">
           </div>
   
           <div class="mySlides">
-            <div class="numbertext">2 / 6</div>
+            <div class="numbertext">2 / 3</div>
             <img src="image/BikeMap2.png" alt="Bike Map 2 of Hamilton" class="image1">
           </div>
   
           <div class="mySlides">
-            <div class="numbertext">3 / 6</div>
+            <div class="numbertext">3 / 3</div>
             <img src="image/BikeMap3.png" alt="Bike Map 3 of Hamilton" class="image1">
           </div>
 
           <div class="mySlides">
-            <div class="numbertext">4 / 6</div>
-            <img src="image/cbroomhuc76.jpg" alt="Digizing" class="image1">
-          </div>
-
-          <div class="mySlides">
-            <div class="numbertext">5 / 6</div>
-            <img src="image/ChirsMap2_page-0001.jpg" alt="Greyscale Map" class="image1">
-          </div>
-
-          <div class="mySlides">
-            <div class="numbertext">6 / 6</div>
-            <img src="image/ChrisMap1_page-0001.jpg" alt="Topographic Map" class="image1">
-          </div>
-
-          <div class="mySlides">
-            <div class="numbertext">7 / 7</div>
-            <img src="image/ChrisBroomServiceArea.jpg" alt="Service Area" class="image1">
+            <div class="numbertext">3 / 4</div>
+            <img src="image/BikeMap4.png" alt="Traffic flow analysis" class="image1">
           </div>
   
           <!-- Next and previous buttons -->
@@ -101,16 +85,7 @@
           </div>
     </div>
 
-    <div class = "center">
-      <h1> GR8 Knows All </h1>
-      <p> If you'd like to learn more, get in reach with one of our GIS specialists today</p>
-      <button onclick = "myButton()">Book a consultation now</button>
-  </div>
-
-  <!--Back to Top Button-->
-  <div>
-    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
-  </div>
+    </section>
   </body>
   
   <script src="Script.js"></script> <!-- Call in script.js for button and other functions-->
