--- a/WillProduct.html
+++ b/WillProduct.html
@@ -86,6 +86,14 @@
       </div>
     </div>
 </section>
+
+<section class="background0000">
+    <div>
+  <img class='resize_fit_center'
+      src='image/TravelPhoto.jpg'alt="Will and Friendss"/>
+    </div>
+</section>
+
 <!-- End of My Product Section-->
 
      <!-- Concluding remarks and button to contact us page-->   
