--- a/WillProduct.html
+++ b/WillProduct.html
@@ -67,7 +67,8 @@
   <section class="background1">
     <div class="container2">
       <div class="centerr">
-        <h1>Implementation of trip planning</h1>
+        <h1>What can I do for you?</h1>
+        <h2>Implementation of trip planning</h2>
         <p id="Section71">
           This use of the trip planning will help clients who are interested in visiting Ontario's Provincal Parks.
           <br>
