--- a/hurricanemanagement.html
+++ b/hurricanemanagement.html
@@ -51,7 +51,7 @@
         </ul>
       </div> 
         <div class="column-right">
-          <img src="image/drmcycle.jpg" alt="drmcycle" class="image">
+          <img src="image/drmcycle.jpg" alt="drmcycle" class="responsive3">>
         </div>
       </div>
     </section>
