--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div class="row">
       <div class="column">
         <div class="card">
-          <img src="img1.jpg" alt="Jane" style="width:100%">
+          <img src="img1.jpg" alt="Jane" class= "responsive3">
           <div class="container">
             <h2>Grace Kim</h2>
             <p class="title">CEO &amp; Founder</p>
@@ -69,7 +69,7 @@
 
       <div class="column">
         <div class="card">
-          <img src="ChrisPhoto.jpg" alt="Chris" style="width:100%">
+          <img src="ChrisPhoto.jpg" alt="Chris" class= "responsive3">
           <div class="container">
             <h2>Chris Broom</h2>
             <p class="title">Director &amp; Co-Founder</p>
@@ -82,7 +82,7 @@
 
       <div class="column">
         <div class="card">
-          <img src="img2.jpg" alt="Mike" style="width:100%">
+          <img src="img2.jpg" alt="Mike" class="responsive3">
           <div class="container">
             <h2>Ryan Bye</h2>
             <p class="title">Risk Management Director</p>
@@ -95,7 +95,7 @@
 
       <div class="column">
         <div class="card">
-          <img src="image/Willydog.jpg" alt="Will" style="width:100%">
+          <img src="image/Willydog.jpg" alt="Will" class= "responsive3">
           <div class="container">
             <h3>William Inglis</h3>
             <p class="title">Designer</p>
