--- a/WillProduct.html
+++ b/WillProduct.html
@@ -52,7 +52,7 @@
   <div id="Section70">
     <h3>What keeps me motivated?</h3>
   </div>
-  <div class='container3'>
+  <div class='container3' class="center">
     <img class='resize_fit_center'
       src='image/Ronnie.JPG'alt="Will and Friendss"/>
     </a>
@@ -91,7 +91,7 @@
 </section>
 
 <section class="background0000">
-    <div>
+    <div class="center">
   <img class='resize_fit_center'
       src='image/TravellPhoto.jpg'alt="TravelPhoto"/>
     </div>
