--- a/WillProduct.html
+++ b/WillProduct.html
@@ -51,7 +51,7 @@
   <div id="Section70">
     <h3>What keeps me motivated?</h3>
   </div>
-  <div class='container3' class="center">
+  <div class='container3'>
     <img class='resize_fit_center'
       src='image/Ronnie.JPG'alt="Will and Friendss"/>
     </a>
