--- a/gallery.html
+++ b/gallery.html
@@ -40,23 +40,28 @@
 
       <!-- Full-width images with number text -->
           <div class="mySlides">
-            <div class="numbertext">1 / 3</div>
+            <div class="numbertext">1 / 5</div>
             <img src="image/BikeMap1.png" alt="Bike Map 1 of Hamilton" class="image1">
           </div>
   
           <div class="mySlides">
-            <div class="numbertext">2 / 3</div>
+            <div class="numbertext">2 / 5</div>
             <img src="image/BikeMap2.png" alt="Bike Map 2 of Hamilton" class="image1">
           </div>
   
           <div class="mySlides">
-            <div class="numbertext">3 / 3</div>
+            <div class="numbertext">3 / 5</div>
             <img src="image/BikeMap3.png" alt="Bike Map 3 of Hamilton" class="image1">
           </div>
 
           <div class="mySlides">
-            <div class="numbertext">3 / 4</div>
+            <div class="numbertext">4 / 5</div>
             <img src="image/BikeMap4.png" alt="Traffic flow analysis" class="image1">
+          </div>
+
+          <div class="mySlides">
+            <div class="numbertext">5 / 5</div>
+            <img src="image/TravelPhoto.jpg" alt="Travel Photo" class="image1">
           </div>
   
           <!-- Next and previous buttons -->
@@ -80,7 +85,10 @@
               <img class="demo cursor" src="image/BikeMap3.png" alt="Local bike network" onclick="currentSlide(3)">
             </div>
             <div class="column">
-              <img class="demo cursor" src="image/BikeMap4.png" alt="Traffic flow analysis" onclick="currentSlide(3)">
+              <img class="demo cursor" src="image/BikeMap4.png" alt="Traffic flow analysis" onclick="currentSlide(4)">
+            </div>
+            <div class="column">
+              <img class="demo cursor" src="image/TravelPhoto.jpg" alt="TravelPhoto" onclick="currentSlide(5)">
             </div>
           </div>
     </div>
