--- a/aboutus.html
+++ b/aboutus.html
@@ -66,6 +66,8 @@
             <h3>Implementation of trip planning for provincal parks in Ontario</h3>
             <ul>
                 <li>Trip Planner and aspiring aquafit instructor</li>
+                <li>Make the perfect itinerary for your trip</li>
+                <li>Use behind the scene coding to get you where you need to go the most efficiently</li>
             </ul>
             <button onclick = "WButton()"> View Product </button>
         </div>
