--- a/aboutus.html
+++ b/aboutus.html
@@ -54,7 +54,7 @@
         </div>
         <div class="column-right">
             <p id="nameid">Chris</p>
-            <h3>TBD</h3>
+            <h3>Mapping, digitizing, and planning</h3>
             <ul>
                 <li>Topographic mapping services</li>
                 <li>Greyscale mapping servcies</li>
