--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div class="row">
       <div class="column">
         <div class="card">
-          <img src="img1.jpg" alt="Jane" class= "responsive3">
+          <img src="img1.jpg" alt="Grace" class= "responsive3">
           <div class="container">
             <h2>Grace Kim</h2>
             <p class="title">CEO &amp; Founder</p>
@@ -82,7 +82,7 @@
 
       <div class="column">
         <div class="card">
-          <img src="img2.jpg" alt="Mike" class="responsive3">
+          <img src="ryan.jpg" alt="Ryan" class="responsive3">
           <div class="container">
             <h2>Ryan Bye</h2>
             <p class="title">Risk Management Director</p>
@@ -98,7 +98,7 @@
           <img src="image/Willydog.jpg" alt="Will" class= "responsive3">
           <div class="container">
             <h3>William Inglis</h3>
-            <p class="title">Designer</p>
+            <p class="title">Lead Designer</p>
             <p>I am your trip planner</p>
             <p>don'temailme@don'temailme.com</p>
             <p><button class="button">Contact</button></p>
