--- a/hurricanemanagement.html
+++ b/hurricanemanagement.html
@@ -34,7 +34,7 @@
     <!-- Navigation End. Keep this consistent throughout the pages-->
 
     <section class="background1">
-      <div>
+      <div class="column-left">
         <h1> Applying Core Risk Management Principles to Disaster Risk Management(DRM)</h1>
         <p> Businesses can leverage the recent experiences and basic risk management principles to develop proactive DRM strategies. The basic principles of risk management can and should be applied for Disaster Risk Management (DRM) to:</p>
         <ul>
