--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
             <div class="column33">
                 <div class="center">
                     <!-- Image Credit: David, CC BY-SA 4.0 <https://creativecommons.org/licenses/by-sa/4.0>, via Wikimedia Commons-->
-                    <img src="image/mail.jpg" alt="Email" class="imageround">
+                    <img src="image/mail150.jpg" alt="Email" class="imageround">
                     <h3>EMAIL</h3>
                     <h4>Request Quote</h4>
                     <h5>Quote@notrealemail.com</h5>   
@@ -52,7 +52,7 @@
              </div>
             <div class="column33">
                 <div class="center">
-                    <!--Image Credit: Tokyoship, CC BY-SA 3.0 <https://creativecommons.org/licenses/by-sa/3.0>, via Wikimedia Commons-->
+                    <!--Image Credit: Manbarizza, CC BY-SA 4.0 <https://creativecommons.org/licenses/by-sa/4.0>, via Wikimedia Commons-->
                     <img src="image/phone.jpg" alt="phone number" class="imageround">
                     <h3>PHONE</h3>
                     <h4>Office</h4>
