--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
             <div class="column33" >
                 <div class="center">
                     <!--Image Credit: Dave Gandy, CC BY 3.0 <https://creativecommons.org/licenses/by/3.0>, via Wikimedia Commons-->
-                    <img src="image/house.jpg" alt="Address" class="imageround">
+                    <img src="image/house150.jpg" alt="Address" class="imageround">
                     <h3>ADDRESS</h3>
                     <h4>Lindsay Office</h4>
                     <h5>200 Albert St S</h5>   
