--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
             <div class="column33">
                 <div class="center">
                     <!--Image Credit: Manbarizza, CC BY-SA 4.0 <https://creativecommons.org/licenses/by-sa/4.0>, via Wikimedia Commons-->
-                    <img src="image/phone.jpg" alt="phone number" class="imageround">
+                    <img src="image/phone150.jpg" alt="phone number" class="imageround">
                     <h3>PHONE</h3>
                     <h4>Office</h4>
                     <h5>(123) 456-7890</h5>   
