--- a/gallery.html
+++ b/gallery.html
@@ -41,28 +41,38 @@
 
       <!-- Full-width images with number text -->
           <div class="mySlides">
-            <div class="numbertext">1 / 5</div>
+            <div class="numbertext">1 / 7</div>
             <img src="image/BikeMap1.png" alt="Bike Map 1 of Hamilton" class="image1">
           </div>
   
           <div class="mySlides">
-            <div class="numbertext">2 / 5</div>
+            <div class="numbertext">2 / 7</div>
             <img src="image/BikeMap2.png" alt="Bike Map 2 of Hamilton" class="image1">
           </div>
   
           <div class="mySlides">
-            <div class="numbertext">3 / 5</div>
+            <div class="numbertext">3 / 7</div>
             <img src="image/BikeMap3.png" alt="Bike Map 3 of Hamilton" class="image1">
           </div>
 
           <div class="mySlides">
-            <div class="numbertext">4 / 5</div>
+            <div class="numbertext">4 / 7</div>
             <img src="image/BikeMap4.png" alt="Traffic flow analysis" class="image1">
           </div>
 
           <div class="mySlides">
-            <div class="numbertext">5 / 5</div>
+            <div class="numbertext">5 / 7</div>
             <img src="image/TravelPhoto.jpg" alt="Travel Photo" class="image1">
+          </div>
+
+          <div class="mySlides">
+            <div class="numbertext">6 / 7</div>
+            <img src="image/ChirsMap2_page-0001.jpg" alt="Travel Photo" class="image1">
+          </div>
+
+          <div class="mySlides">
+            <div class="numbertext">7 / 7</div>
+            <img src="image/ChirsMap2_page-0001.jpg" alt="Travel Photo" class="image1">
           </div>
   
           <!-- Next and previous buttons -->
