--- a/gallery.html
+++ b/gallery.html
@@ -67,12 +67,12 @@
 
           <div class="mySlides">
             <div class="numbertext">6 / 7</div>
-            <img src="image/ChirsMap2_page-0001.jpg" alt="Travel Photo" class="image1">
+            <img src="image/ChirsMap1_page-0001.jpg" alt="Topographic Map" class="image1">
           </div>
 
           <div class="mySlides">
             <div class="numbertext">7 / 7</div>
-            <img src="image/ChirsMap2_page-0001.jpg" alt="Travel Photo" class="image1">
+            <img src="image/ChrisMap2_page-0001.jpg" alt="Greyscale Map" class="image1">
           </div>
   
           <!-- Next and previous buttons -->
@@ -100,6 +100,12 @@
             </div>
             <div class="column">
               <img class="demo cursor" src="image/TravelPhoto.jpg" alt="TravelPhoto" onclick="currentSlide(5)">
+            </div>
+            <div class="column">
+              <img class="demo cursor" src="image/ChrisMap1_page-0001.jpg" alt="Topographic Map" onclick="currentSlide(6)">
+            </div>
+            <div class="column">
+              <img class="demo cursor" src="image/ChirsMap2_page-0001.jpg" alt="Greyscale Map" onclick="currentSlide(7)">
             </div>
           </div>
     </div>
