--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="mobile-nav-toggle fixed-nav-toggle"><div class="top-bar"></div><div class="middle-bar"></div><div class="bottom-bar"></div></div>
 
     <!-- Navigation Start. Keep this consistent throughout the pages-->
-    <div class="navbar">
+    <div class="navbar" id="myTopnav">
       <div class="logo">GR8 Consulting</div>
       <a href="index.html" class = "dropbtn">Home</a>
       <div class="dropdown" id="minimargin"> <!--minimargin id to give some space next to products without messing with flexbox-->
@@ -36,6 +36,9 @@
       <a href="aboutus.html" class = "dropbtn">About Us</a>
       <a href="gallery.html" class = "dropbtn">Gallery</a>
       <a href="contact.html" class = "dropbtn">Contact Us</a>
+      <a href="javascript:void(0);" class="icon" onclick="navFunction()">
+        <i class="fa fa-bars"></i>
+      </a>
     </div>
     <!-- Navigation End. Keep this consistent throughout the pages-->
 
