--- a/bikeinfrastructure.html
+++ b/bikeinfrastructure.html
@@ -113,7 +113,8 @@
 
     </body>
     <script src="Script.js"></script> <!-- Call in script.js for button and other functions-->
-    <script>let 
+    <script>
+    let 
     slideIndex = 1; 
     showSlides(slideIndex);</script>
 </html>
