correct image html code

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
       <div class="column">
         <div class="card">
-          <img src="ChrisPhoto.jpg" alt="Chris" class= "responsive3">
+          <img src="image/ChrisPhoto.jpg" alt="Chris" class= "responsive3">
           <div class="container">
             <h2>Chris Broom</h2>
             <p class="title">Director &amp; Co-Founder</p>
@@ -85,7 +85,7 @@
 
       <div class="column">
         <div class="card">
-          <img src="ryan.jpg" alt="Ryan" class="responsive3">
+          <img src="image/ryan.jpg" alt="Ryan" class="responsive3">
           <div class="container">
             <h2>Ryan Bye</h2>
             <p class="title">Risk Management Director</p>
