--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
       <div class="column">
         <div class="card">
-          <img src="image/ryan.jpg" alt="Ryan" class="responsive3">
+          <img src="image/ryan.jpg" alt="ryan" class="responsive3">
           <div class="container">
             <h2>Ryan Bye</h2>
             <p class="title">Risk Management Director</p>
