--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div class="row">
       <div class="column">
         <div class="card">
-          <img src="img1.jpg" alt="Grace" class= "responsive3">
+          <img src="image/grace1.jpg" alt="Grace" class= "responsive3">
           <div class="container">
             <h2>Grace Kim</h2>
             <p class="title">CEO &amp; Founder</p>
@@ -73,7 +73,7 @@
 
       <div class="column">
         <div class="card">
-          <img src="image/ChrisPhoto.jpg" alt="Chris" class= "responsive3">
+          <img src="image/chris1.jpg" alt="Chris" class= "responsive3">
           <div class="container">
             <h2>Chris Broom</h2>
             <p class="title">Director &amp; Co-Founder</p>
@@ -86,7 +86,7 @@
 
       <div class="column">
         <div class="card">
-          <img src="image/ryan.jpg" alt="ryan" class="responsive3">
+          <img src="image/ryan1.JPG" alt="Ryan" class="responsive3">
           <div class="container">
             <h2>Ryan Bye</h2>
             <p class="title">Risk Management Director</p>
@@ -99,7 +99,7 @@
 
       <div class="column">
         <div class="card">
-          <img src="image/Willydog.jpg" alt="Will" class= "responsive3">
+          <img src="image/Will1.jpg" alt="Will" class= "responsive3">
           <div class="container">
             <h3>William Inglis</h3>
             <p class="title">Lead Designer</p>
