--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <div class="navbar" id="myTopnav">
       <div class="logo">GR8 Consulting</div>
-      <a href="index.html" class = "dropbtn">Home</a>
+      <a href="index.html" class = "active">Home</a>
       <div class="dropdown" id="minimargin"> <!--minimargin id to give some space next to products without messing with flexbox-->
         <button class="dropbtn">Products
         </button>
@@ -60,48 +60,52 @@
     <div class="row">
       <div class="column">
         <div class="card">
-          <img src="image/grace1.jpg" alt="Grace" class= "responsive3">
+          <img src="image/grace.jpg" alt="Grace" class= "responsive3">
           <div class="container">
             <h2>Grace Kim</h2>
             <p class="title">CEO &amp; Founder</p>
             <p>Some text that describes Grace.</p>
             <p>grace@example.com</p>
+            <p><button class="button">Contact</button></p>
           </div>
         </div>
       </div>
 
       <div class="column">
         <div class="card">
-          <img src="image/chris1.jpg" alt="Chris" class= "responsive3">
+          <img src="image/ChrisPhoto.jpg" alt="Chris" class= "responsive3">
           <div class="container">
             <h2>Chris Broom</h2>
             <p class="title">Director &amp; Co-Founder</p>
             <p>Some text that describes Chris.</p>
             <p>chris@example.com</p>
+            <p><button class="button">Contact</button></p>
           </div>
         </div>
       </div>
 
       <div class="column">
         <div class="card">
-          <img src="image/ryan1.JPG" alt="Ryan" class="responsive3">
+          <img src="image/ryan.jpg" alt="ryan" class="responsive3">
           <div class="container">
             <h2>Ryan Bye</h2>
             <p class="title">Risk Management Director</p>
             <p>Some text that describes Ryan.</p>
             <p>ryan@example.com</p>
+            <p><button class="button">Contact</button></p>
           </div>
         </div>
       </div>
 
       <div class="column">
         <div class="card">
-          <img src="image/Will1.jpg" alt="Will" class= "responsive3">
+          <img src="image/Willydog.jpg" alt="Will" class= "responsive3">
           <div class="container">
             <h3>William Inglis</h3>
             <p class="title">Lead Designer</p>
             <p>I am your trip planner</p>
             <p>don'temailme@leavemealone.com</p>
+            <p><button class="button">Contact</button></p>
           </div>
         </div>
       </div>
