--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
       <div class="column">
         <div class="card">
-          <img src="image/ChrisPhoto.jpg" alt="Chris" class= "responsive3">
+          <img src="image/chris1.jpg" alt="Chris" class= "responsive3">
           <div class="container">
             <h2>Chris Broom</h2>
             <p class="title">Director &amp; Co-Founder</p>
@@ -84,7 +84,7 @@
 
       <div class="column">
         <div class="card">
-          <img src="image/ryan.jpg" alt="ryan" class="responsive3">
+          <img src="image/ryan1.JPG" alt="ryan" class="responsive3">
           <div class="container">
             <h2>Ryan Bye</h2>
             <p class="title">Risk Management Director</p>
@@ -96,7 +96,7 @@
 
       <div class="column">
         <div class="card">
-          <img src="image/Willydog.jpg" alt="Will" class= "responsive3">
+          <img src="image/Will1.jpg" alt="Will" class= "responsive3">
           <div class="container">
             <h3>William Inglis</h3>
             <p class="title">Lead Designer</p>
