--- a/index.html
+++ b/index.html
@@ -21,27 +21,29 @@
     <div class="mobile-nav-toggle fixed-nav-toggle"><div class="top-bar"></div><div class="middle-bar"></div><div class="bottom-bar"></div></div>
 
     <!-- Navigation Start. Keep this consistent throughout the pages-->
-
-    <div class="navbar" id="myTopnav">
-      <div class="logo">GR8 Consulting</div>
-      <a href="index.html" class = "active">Home</a>
-      <div class="dropdown" id="minimargin"> <!--minimargin id to give some space next to products without messing with flexbox-->
-        <button class="dropbtn">Products
-        </button>
-        <div class="dropdown-content">
-          <a href= "ChrisProduct.html"> Chris</a>
-          <a href= "bikeinfrastructure.html"> Grace</a>
-          <a href= "hurricanemanagement.html"> Ryan</a>
-          <a href= "WillProduct.html">William</a>
+    <nav class="navbar">
+    <div class="logo">GR8 Consulting</div>
+      <ul class="nav-links">
+        <input type="checkbox" id="checkbox_toggle" />
+        <label for="checkbox_toggle" class="hamburger">&#9776;</label>  
+        <div class="menu">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="aboutus.html">About</a></li>     
+          <li class="services">
+          <a href="#">Products</a>
+          <!-- DROPDOWN MENU -->
+          <ul class="dropdown">
+          <li><a href="ChrisProduct.html">Chris</a></li>
+          <li><a href="bikeinfrastructure.html">Grace</a></li>
+          <li><a href="WillProduct.html">William</a></li>
+          <li><a href="hurricanemanagement.html">Ryan</a></li>
+          </ul>
+          </li>
+          <li><a href="gallery.html">Gallery</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
         </div>
-      </div>
-      <a href="aboutus.html" class = "dropbtn">About Us</a>
-      <a href="gallery.html" class = "dropbtn">Gallery</a>
-      <a href="contact.html" class = "dropbtn">Contact Us</a>
-      <a href="javascript:void(0);" class="icon" onclick="navFunction()">
-        <i class="fa fa-bars"></i>
-      </a>
-    </div>
+      </ul>
+    </nav>
     <!-- Navigation End. Keep this consistent throughout the pages-->
 
     
