--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!--Site Metas-->
     <title>GR8 Consulting / Home Page</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles.css"/>
   
   </head>
 
   <body>
 
-    <!--Navbar toggle when screensize changes-->
+    <!--Navbar toggle when screensize changes
     <div class="mobile-nav-toggle"><div class="top-bar"></div><div class="middle-bar"></div><div class="bottom-bar"></div></div>
     <div class="mobile-nav-toggle fixed-nav-toggle"><div class="top-bar"></div><div class="middle-bar"></div><div class="bottom-bar"></div></div>
-
+      -->
+      
     <!-- Navigation Start. Keep this consistent throughout the pages-->
     <nav class="navbar">
     <div class="logo">GR8 Consulting</div>
@@ -33,14 +33,14 @@
           <a href="#">Products</a>
           <!-- DROPDOWN MENU -->
           <ul class="dropdown">
-          <li><a href="ChrisProduct.html">Chris</a></li>
-          <li><a href="bikeinfrastructure.html">Grace</a></li>
-          <li><a href="WillProduct.html">William</a></li>
-          <li><a href="hurricanemanagement.html">Ryan</a></li>
+          <li class="list1"><a href="ChrisProduct.html">Chris</a></li>
+          <li class="list1"><a href="bikeinfrastructure.html">Grace</a></li>
+          <li class="list1"><a href="WillProduct.html">William</a></li>
+          <li class="list1"><a href="hurricanemanagement.html">Ryan</a></li>
           </ul>
           </li>
-          <li><a href="gallery.html">Gallery</a></li>
-          <li><a href="contact.html">Contact Us</a></li>
+          <li class="list1"><a href="gallery.html">Gallery</a></li>
+          <li class="list1"><a href="contact.html">Contact Us</a></li>
         </div>
       </ul>
     </nav>
