--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="mobile-nav-toggle"><div class="top-bar"></div><div class="middle-bar"></div><div class="bottom-bar"></div></div>
     <div class="mobile-nav-toggle fixed-nav-toggle"><div class="top-bar"></div><div class="middle-bar"></div><div class="bottom-bar"></div></div>
       -->
-      
+
     <!-- Navigation Start. Keep this consistent throughout the pages-->
     <nav class="navbar">
     <div class="logo">GR8 Consulting</div>
@@ -27,16 +27,16 @@
         <input type="checkbox" id="checkbox_toggle" />
         <label for="checkbox_toggle" class="hamburger">&#9776;</label>  
         <div class="menu">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="aboutus.html">About</a></li>     
+          <li class="list1"><a href="index.html">Home</a></li>
+          <li class="list1"><a href="aboutus.html">About</a></li>     
           <li class="services">
           <a href="#">Products</a>
           <!-- DROPDOWN MENU -->
-          <ul class="dropdown">
-          <li class="list1"><a href="ChrisProduct.html">Chris</a></li>
-          <li class="list1"><a href="bikeinfrastructure.html">Grace</a></li>
-          <li class="list1"><a href="WillProduct.html">William</a></li>
-          <li class="list1"><a href="hurricanemanagement.html">Ryan</a></li>
+          <ul class="dropdown-content">
+            <li class="list1"><a href="ChrisProduct.html">Chris</a></li>
+            <li class="list1"><a href="bikeinfrastructure.html">Grace</a></li>
+            <li class="list1"><a href="WillProduct.html">William</a></li>
+            <li class="list1"><a href="hurricanemanagement.html">Ryan</a></li>
           </ul>
           </li>
           <li class="list1"><a href="gallery.html">Gallery</a></li>
