--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="menu">
           <li class="list1"><a href="index.html">Home</a></li>
           <li class="list1"><a href="aboutus.html">About</a></li>     
-          <li class="services">
+          <li class="services list1">
           <a href="#">Products</a>
           <!-- DROPDOWN MENU -->
           <ul class="dropdown-content">
