--- a/ChrisProduct.html
+++ b/ChrisProduct.html
@@ -45,7 +45,6 @@
   <!-- Container for the image gallery -->
   <div class="container4">
 
-    <!-- Full-width images with number text -->
     <div style="text-align:center">
       <h2>Gallery</h2>
       <p>Click on the images below to get a closer look!:</p>
@@ -56,16 +55,16 @@
     <!-- The four columns -->
     <div class="row">
       <div class="column25">
-        <img src="image/ChrisBroomServiceArea.jpg" alt="Nature" class="image1" onclick="TabGallery(this);">
+        <img src="image/ChrisBroomServiceArea.jpg" alt="Service Area" class="imageproductchris" onclick="TabGallery(this);">
       </div>
       <div class="column25">
-        <img src="image/cbroomhuc76.jpg" alt="Snow" class="image1" onclick="TabGallery(this);">
+        <img src="image/cbroomhuc76.jpg" alt="Digitizing" class="imageproductchris" onclick="TabGallery(this);">
       </div>
       <div class="column25">
-        <img src="image/ChirsMap2_page-0001.jpg" alt="Mountains" class="image1" onclick="TabGallery(this);">
+        <img src="image/ChirsMap2_page-0001.jpg" alt="Greyscale" class="imageproductchris" onclick="TabGallery(this);">
       </div>
       <div class="column25">
-        <img src="image/ChrisMap1_page-0001.jpg" alt="Lights" class="image1" onclick="TabGallery(this);">
+        <img src="image/ChrisMap1_page-0001.jpg" alt="Topographic" class="imageproductchris" onclick="TabGallery(this);">
       </div>
     </div>
 
