product page chris

--- a/ChrisProduct.html
+++ b/ChrisProduct.html
@@ -61,10 +61,10 @@
         <img src="image/cbroomhuc76.jpg" alt="Digitizing" class="imageproductchris" onclick="TabGallery(this);">
       </div>
       <div class="column25">
-        <img src="image/ChirsMap2_page-0001.jpg" alt="Greyscale" class="imageproductchris" onclick="TabGallery(this);">
+        <img src="image/ChirsMapGrey.jpg" alt="Greyscale" class="imageproductchris" onclick="TabGallery(this);">
       </div>
       <div class="column25">
-        <img src="image/ChrisMap1_page-0001.jpg" alt="Topographic" class="imageproductchris" onclick="TabGallery(this);">
+        <img src="image/ChrisMapTopo.jpg" alt="Topographic" class="imageproductchris" onclick="TabGallery(this);">
       </div>
     </div>
 
