change to product page

--- a/ChrisProduct.html
+++ b/ChrisProduct.html
@@ -55,22 +55,22 @@
     <!-- The four columns -->
     <div class="row">
       <div class="column25">
-        <img src="image/ChrisBroomServiceArea.jpg" alt="Service Area" class="imageproductchris" onclick="TabGallery(this);">
+        <img src="image/ServiceArea1000.jpg" alt="Service Area" class="imageproductchris" onclick="TabGallery(this);">
       </div>
       <div class="column25">
-        <img src="image/cbroomhuc76.jpg" alt="Digitizing" class="imageproductchris" onclick="TabGallery(this);">
+        <img src="image/cbroomhuc76_1000.jpg" alt="Digitizing" class="imageproductchris" onclick="TabGallery(this);">
       </div>
       <div class="column25">
-        <img src="image/ChirsMapGrey.jpg" alt="Greyscale" class="imageproductchris" onclick="TabGallery(this);">
+        <img src="image/ChrisMapGrey1000.jpg" alt="Greyscale" class="imageproductchris" onclick="TabGallery(this);">
       </div>
       <div class="column25">
-        <img src="image/ChrisMapTopo.jpg" alt="Topographic" class="imageproductchris" onclick="TabGallery(this);">
+        <img src="image/ChrisMapTopo1000.jpg" alt="Topographic" class="imageproductchris" onclick="TabGallery(this);">
       </div>
     </div>
 
     <div class="containerrelative">
       <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
-      <img id="expandedImg" style="width:100%">
+      <img id="expandedImg" style="imageproductchris:100%">
       <div id="imgtext"></div>
     </div>
     
