--- a/ChrisProduct.html
+++ b/ChrisProduct.html
@@ -70,7 +70,7 @@
 
     <div class="containerrelative">
       <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
-      <img id="expandedImg" style="imageproductchris:100%">
+      <img id="expandedImg" class="imageproductchris">
     </div>
     
    
