small change back

--- a/ChrisProduct.html
+++ b/ChrisProduct.html
@@ -69,8 +69,9 @@
     </div>
 
     <div class="containerrelative">
-      <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
-      <img id="expandedImg" class="imageproductchris">
+      <span onclick="this.parentElement.style.display='none'">&times;</span>
+      <img id="expandedImg" style="width:100%">
+      <div id=""></div>
     </div>
     
    
