--- a/ChrisProduct.html
+++ b/ChrisProduct.html
@@ -69,9 +69,8 @@
     </div>
 
     <div class="containerrelative">
-      <span onclick="this.parentElement.style.display='none'">&times;</span>
-      <img id="expandedImg" style="width:100%">
-      <div id=""></div>
+      <div onclick="this.parentElement.style.display='none'"  class="imageproductchris">&times;</div>
+      <img id="expandedImg" class="width:100%">
     </div>
     
    
