--- a/ChrisProduct.html
+++ b/ChrisProduct.html
@@ -69,7 +69,7 @@
     </div>
 
     <div class="containerrelative">
-      <div onclick="this.parentElement.style.display='none'"  class="imageproductchris">&times;</div>
+      <span onclick="this.parentElement.style.display='none'"  class="imageproductchris">&times;</span>
       <img id="expandedImg" class="width:100%">
     </div>
     
