--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
         <div class = "column-right"> 
 
-          <IMG src="earth.gif" alt="earth gif" class="image">
+          <IMG src="image/earth.gif" alt="earth gif" class="image">
 
         </div>
       </div>
