--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     
     <section class="background1">
-      <div class="container">
+      <div class="containerindex">
         <div class="column-left">
           <h1> WHAT WE DO</h1>
           <p>
