--- a/aboutus.html
+++ b/aboutus.html
@@ -33,7 +33,7 @@
     </nav>
     <!-- Navigation End. Keep this consistent throughout the pages-->
     
-    <div class="container">
+    <div class="containerindex">
         <div class="column-left centergeneral">
             <p id="nameid">Grace</p>
             <h3>Implementation of separated bike lanes (consult, planning) in a city</h3>
