--- a/aboutus.html
+++ b/aboutus.html
@@ -34,6 +34,15 @@
     <!-- Navigation End. Keep this consistent throughout the pages-->
     
     <div class="containerindex">
+        <div class="center">
+            <h1> About <i>GR8 Consulting</i></h1>
+            <p id="PLayout2">
+              <i>GR8 Consulting</i> is a highly performant geospatial consulting company that aims to help YOU navigate the world using spatial data. From environmental risk management to city infrastructure consult, <i>GR3 Consulting</i> have plethora of GIS-based services available. It's just one phone call away!  </p>
+   
+            <h3>
+              Product highlights: 
+            </h3>
+        </div>
         <div class="column-left centergeneral">
             <p id="nameid">Grace</p>
             <h3>Implementation of separated bike lanes (consult, planning) in a city</h3>
