--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
           <div class="container">
             <h2>Grace Kim</h2>
             <p class="title">CEO &amp; Founder</p>
-            <p>Some text that describes Grace.</p>
-            <p>grace@example.com</p>
+            <p class="textingg">Some text that describes Grace.</p>
+            <p class="textingg">grace@example.com</p>
           </div>
         </div>
       </div>
@@ -77,8 +77,8 @@
           <div class="container">
             <h2>Chris Broom</h2>
             <p class="title">Director &amp; Co-Founder</p>
-            <p>Some text that describes Chris.</p>
-            <p>chris@example.com</p>
+            <p class="textingg">Some text that describes Chris.</p>
+            <p class="textingg">chris@example.com</p>
           </div>
         </div>
       </div>
@@ -89,8 +89,8 @@
           <div class="container">
             <h2>Ryan Bye</h2>
             <p class="title">Risk Management Director</p>
-            <p>Some text that describes Ryan.</p>
-            <p>ryan@example.com</p>
+            <p class="texting">Some text that describes Ryan.</p>
+            <p class="texting">ryan@example.com</p>
           </div>
         </div>
       </div>
@@ -101,8 +101,8 @@
           <div class="container">
             <h3>William Inglis</h3>
             <p class="title">Lead Designer</p>
-            <p>I am your trip planner</p>
-            <p>don'temailme@leavemealone.com</p>
+            <p class="textingg">I am your trip planner</p>
+            <p class="textingg">don'temailme@leavemealone.com</p>
           </div>
         </div>
       </div>
