--- a/hurricanemanagement.html
+++ b/hurricanemanagement.html
@@ -60,7 +60,7 @@
       <section class="background2">
         <div class = "container2">
             <div class = "center">
-                <h1> GR3 Knows All </h1>
+                <h1> Afraid of being blown or swept away? </h1>
                 <p> If you'd like to learn more, get in reach with one of our GIS specialists today</p>
                 <button onclick = "myButton()">Book a consultation now</button>
             </div>
